--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "bootstrap": "^4.1.0",
+    "vue-router": "^4.0.12",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
